# ogis

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.caddy.yml  docker-compose.yml  fonts.yaml
.github/: FUNDING.yml
.github/workflows/: rust.yml  web.yml
benchmarks/: README.md  docker-compose.yml
benchmarks/python/: benchmark.py  pyproject.toml  scenarios.json
benchmarks/vercel-og/: Dockerfile  package-lock.json  package.json
demo/: package-lock.json  package.json
demo/src/lib/config/: site.ts
demo/src/routes/: +layout.svelte  +page.svelte
demo/src/routes/docs/: +page.svelte
demo/src/routes/playground/: +page.svelte
demo/src/routes/showcase/: +page.svelte
src/: config.rs  fonts.rs  generator.rs  image_fetcher.rs  main.rs  params.rs
src/generator/: mod.rs  png.rs  svg.rs  utils.rs
src/generator/events/: default.rs  empty.rs  end.rs  mod.rs  start.rs  state.rs
src/generator/events/handlers/: default.rs  empty.rs  end.rs  mod.rs  start.rs
src/generator/events/replacements/: image.rs
src/generator/handlers/: empty.rs  end.rs  mod.rs  start.rs  state.rs
src/generator/strategies/: image_content.rs  mod.rs  text_content.rs
src/image/: cache.rs  encode.rs  error.rs  fetch.rs  mod.rs  parse.rs  resolver.rs  validate.rs
src/routes/: docs.rs  health.rs  index.rs  mod.rs  og.rs
web/: package-lock.json  package.json  svelte.config.js
web/src/lib/config/: logos.json  site.ts
web/src/routes/: +layout.svelte
(+20 files in other folders)
