[package]
name = "ogis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.49", features = ["derive", "env"] }
dotenvy = "0.15.7"
quick-xml = "0.38.3"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
tiny-skia = "0.11.4"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
usvg = "0.45.1"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
