[package]
name = "ogis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
base64 = "0.22"
clap = { version = "4.5.49", features = ["derive", "env"] }
dotenvy = "0.15.7"
infer = "0.16"
ip_rfc = "0.1.0"
moka = { version = "0.12", features = ["future"] }
quick-xml = "0.38.3"
reqwest = { version = "0.12", features = ["default-tls"] }
resvg = "0.45.1"
saphyr = "0.0.6"
serde = { version = "1.0.228", features = ["derive"] }
tiny-skia = "0.11.4"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5"
usvg = "0.45.1"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
